--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "gamma-mcp-server": "./build/index.js"
   },
   "scripts": {
-    "build": "tsc && chmod 755 build/index.js"
+    "build": "tsc && chmod 755 build/index.js",
+    "start": "node build/index.js"
   },
   "files": [
     "build"
